# musashi

./: .gitignore  CMakeLists.txt  Makefile  m68k.h  m68k_in.c  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kfpu.c  m68kmmu.h  readme.txt
doc/68030/: 030_mmu_review.md  cache_todo.md  mmu_implementation_plan.md  musashi_030_mmu_analysis.md  task.md
doc/68040/: 040_stabilization\_plan.md  cache_todo.md  mmu_implementation_plan.md
doc/68060/: 68060-architecture.md  68060-gap-analysis.md  68060-test-plan.md  README.md  cache_todo.md  implementation-plan.md  technical-design-document.md  walkthrough.md
doc/planning/: TODO.md
doc/testing/: singlestep_harness_design.md  test_plan_fpu.md  test_plan_integer.md  test_plan_mmu_030.md  test_plan_mmu_040.md  test_plan_overview.md  test_plan_singlestep.md  test_plan_system.md  testing_strategy.md
example/: sim.c
test/: Makefile  entry.s  test_driver.c
test/gtest/: CMakeLists.txt  Makefile
test/gtest/framework/: m68k_fixture.cpp  m68k_fixture.h
test/gtest/instructions/bcd/: abcd_sbcd_flags.cpp  bcd_exhaustive_test.cpp  bcd_tests.cpp
test/mc68000/: abcd.s  move.s  sbcd.s
test/mc68010/: movec_caar_bug.s
test/mc68030/: Makefile  entry_030_mmu.s  mmu_identity.s  mmu_reset.s  pflush_all.s  pflush_fc.s  pload_atc.s  pmove_tc.s  pmove_tt.s  ptest_invalid.s  ptest_multi.s  ptest_super.s  ptest_walk.s  ptest_wp.s  tt_match.s  wp_buserr.s
test/mc68040/: Makefile  cinv_cpush.s  entry_040_mmu.s  indirect_desc.s  invalid_page.s  itt_match.s  mmu_simple.s  movec_tc.s  movec_urp_srp.s  pflush_page.s  pflusha.s  pflushn.s  ptest_global.s  ptest_modified.s  ptest_super.s  ptest_wp.s  tt_data.s  um_bits.s  walk_4k.s  walk_8k.s
test/mc68060/: Makefile  cas2_trap.s  chk2_cmp2_trap.s  divl_64_trap.s  ec060_pcr.s  entry_060.s  fadd_exec.s  fmovecr_trap.s  fpiar_trap.s  fpu_hw_ops.s  fpu_rounding_ops.s  fpu_sw_traps.s  fsin_trap.s  lc060_fpu_trap.s  lc060_pcr.s  lpstop_exec.s  mmu_regs.s  mmusr_trap.s  movec_buscr.s  movec_cacr_mask.s  movec_pcr.s  movep_trap.s  mull_64_trap.s  packed_trap.s  pcr_write_mask.s  plpa_exec.s  ptest_trap.s
test/singlestep/: .gitignore  CMakeLists.txt  README.md  sst_loader.c  sst_loader.h  sst_runner.c  sst_runner.sh
tools/: sst_convert.py
